--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build-libs:
     name: Build Libs for ${{ matrix.target }}
-    runs-on: ubuntu-latest
+    runs-on: macos-14
     strategy:
       matrix:
         target: [esp32]
